# DrissionPage-mcp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-drissionpage-mcp-v0.md
docs/superpowers/specs/: 2026-04-09-drissionpage-mcp-design.md
src/drissionpage_mcp/: config.py  dependencies.py  errors.py  models.py  policies.py  server.py
src/drissionpage_mcp/adapters/: drission_browser.py  drission_element.py  drission_page.py
src/drissionpage_mcp/services/: browser_registry.py  browser_session.py  page_service.py
src/drissionpage_mcp/tools/: core.py  introspection.py
tests/e2e/: conftest.py  test_local_browser_flow.py
tests/e2e/site/: index.html
tests/integration/: test_tool_handlers.py
tests/unit/: test_browser_registry.py  test_config.py  test_errors.py  test_models.py  test_page_service.py  test_policies.py  test_server.py
