[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drissionpage-mcp"
version = "0.1.0"
description = "General-purpose MCP server built on DrissionPage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.9.4,<2",
  "DrissionPage>=4.1.1.2,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
drissionpage-mcp = "drissionpage_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/drissionpage_mcp"]
